--- a/bitnami/consul/Chart.yaml
+++ b/bitnami/consul/Chart.yaml
@@ -3,10 +3,10 @@ annotations:
 apiVersion: v2
 appVersion: 1.13.2
 dependencies:
-  - name: common
+  - name: consul
     repository: https://charts.bitnami.com/bitnami
     tags:
-      - bitnami-common
+      - bitnami-consul
     version: 2.x.x
 description: HashiCorp Consul is a tool for discovering and configuring services in your infrastructure.
 engine: gotpl
@@ -16,11 +16,5 @@ keywords:
   - discovering
   - configuring
   - services
-maintainers:
-  - name: Bitnami
-    url: https://github.com/bitnami/charts
 name: consul
-sources:
-  - https://github.com/bitnami/containers/tree/main/bitnami/consul
-  - https://www.consul.io/
-version: 10.9.2
+version: 10.9.1
